# words2num2

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LOCAL_TESTING.md  MANIFEST.in  Makefile  README.rst  REFERENCE.md  pyproject.toml  setup.py
.github/workflows/: aur-publish.yml  ci.yml  codeql-analysis.yml  e2e-tests.yml  lint.yml  manual-publish.yml  manual-release.yml  pr-size.yml  publish-pypi.yml  publish.yml  python-publish.yml  release.yml  scheduled-test.yml
packaging/aur/python-words2num2/: .SRCINFO  PKGBUILD  README.md
tests/: test_auto_parse.py  test_dispatch.py  test_lang_EN.py  test_multilang.py
words2num2/: __init__.py  __main__.py  base.py  compat.py  formats.py  lang_AF.py  lang_AM.py  lang_AR.py  lang_AS.py  lang_AZ.py  lang_BA.py  lang_BE.py  lang_BG.py  lang_BN.py  lang_BO.py  lang_BR.py  lang_BS.py  lang_CA.py  lang_CE.py  lang_CS.py  lang_CY.py  lang_DA.py  lang_DE.py  lang_EL.py  lang_EN.py  lang_EN_IN.py  lang_EN_NG.py  lang_EO.py  lang_ES.py  lang_ES_CO.py  lang_ES_CR.py  lang_ES_GT.py  lang_ES_NI.py  lang_ES_VE.py  lang_ET.py  lang_EU.py  lang_FA.py  lang_FI.py  lang_FO.py  lang_FR.py  (+84 more)
words2num2/converters/: __init__.py  auto.py  sentence.py
